frontend/test/should_pass/basic_070.grg
using basic_model_070;
